added MainActivity and added Tab on ActionBar

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,4 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">Pook for Android</string>
+    
+    <string name="tab_public_timeline">タイムライン</string>
+    <string name="tab_check">チェック</string>
 </resources>
